--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,5 @@
 1. Написать документацию
 2. Написать тесты
 3. Написать описание пакета и проверить установку через setuptools
+4. Проверка подписи в ответе Platron
+5. Реализовать response в callback
