--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,4 @@
-1. Написать документацию
 2. Написать тесты
 3. Написать описание пакета и проверить установку через setuptools
 4. Проверка подписи в ответе Platron
-5. Реализовать response в callback
+5. Проверить __response в callback
