--- a/TODO.txt
+++ b/TODO.txt
@@ -1,2 +1,2 @@
-2. Ќаписать тесты
-3. Ќаписать описание пакета и проверить установку через setuptools
+1. Ќаписать тесты
+2. Ќаписать описание пакета и проверить установку через setuptools и добавить пакет в pypi
