Описанияе пакета в README

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,2 +1,2 @@
 1. Ќаписать тесты
-2. Ќаписать описание пакета и проверить установку через setuptools и добавить пакет в pypi
+2. ѕроверить установку через setuptools и добавить пакет в pypi
