Тесты объектов данных

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,2 +1,5 @@
 1. Написать тесты
 2. Проверить установку через setuptools и добавить пакет в pypi
+3. Протестировать на других версиях языка
+4. Посмотреть почему не отправляется request.post
+5. mock объекты и type() в LongRecordTest, InitTransactionTest
