Отправка через POST в теге pg_xml

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,1 @@
-1. Проверить установку через setuptools и добавить пакет в pypi
-2. Протестировать на других версиях языка
-3. Посмотреть почему не отправляется request.post
+1. Добавить пакет в pypi и проверить установку через него
